recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:2: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l != Nil){
                    ^plusOne:2: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l != Nil){
        ^