recursion.cons.lessons.recursion.cons.PlusOne.scala.code
def plusOne(l:List[Int]): List[Int] = {
	if(l != Nil){
		
	}
}
